--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.0",
         "phpunit/phpunit": "^11.0",
-        "spatie/laravel-ignition": "^2.4"
+        "spatie/laravel-ignition": "^2.4",
+        "activecollab/activecollab-feather-sdk": "^3.0"
     },
     "autoload": {
         "psr-4": {
