- Create authentication logic - Sign in and sign out forms

--- a/.env.example
+++ b/.env.example
@@ -64,3 +64,8 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 VITE_APP_NAME="${APP_NAME}"
 
 STATIC_FILE_VERSION=
+
+# Active Collab
+ACTIVE_COLLAB_ORGANISATION_NAME=
+ACTIVE_COLLAB_APP_NAME=
+ACTIVE_COLLAB_ACCOUNT_ID=
