- Service methods for fetching tasks and individual task - Add js functionality to fetch task/tasks

--- a/.env.example
+++ b/.env.example
@@ -69,3 +69,4 @@ STATIC_FILE_VERSION=
 ACTIVE_COLLAB_ORGANISATION_NAME=
 ACTIVE_COLLAB_APP_NAME=
 ACTIVE_COLLAB_ACCOUNT_ID=
+ACTIVE_COLLAB_PROJECT_ID=
